--- a/school/templates/administrator2.html
+++ b/school/templates/administrator2.html
@@ -145,7 +145,7 @@
           <th>Email <div class="search-div"><input  class="searchbar" type="text" id="EmailInput" onkeyup="findBy(7)" placeholder="Szukaj..."></div></th>
           <th>Data zatrudnienia <div class="search-div"><input class="searchbar" type="text" id="DateInput" onkeyup="findBy(8)" placeholder="Szukaj..."></div></th>
           <th>Stanowisko<div class="search-div"><input class="searchbar" type="text" id="PositionInput" onkeyup="findBy(9)" placeholder="Szukaj..."></div></th>
-          <td>Akcje</td>
+          <th>Akcje</th>
         </tr>
 
         {% for emp in allemployees %}
