--- a/school/templates/nauczyciel.html
+++ b/school/templates/nauczyciel.html
@@ -70,6 +70,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Uczniowie - widok nauczyciela</title>
+    <link rel="stylesheet" href="/static/searchstyle.css" />
     <link rel="stylesheet" href="/static/style/nauczyciel/css/style.min.css" />
   </head>
 
