Simple layout edits.

--- a/school/templates/administrator.html
+++ b/school/templates/administrator.html
@@ -163,7 +163,7 @@
               />
               <div class="btnWrapper">
                 <button class="emplData" type="submit" action="submit">
-                  Edytuj dane ucznia!
+                  Wyświetl lub edytuj dane
                 </button>
               </div>
             </form>
