--- a/school/templates/administrator2.html
+++ b/school/templates/administrator2.html
@@ -175,7 +175,7 @@
               />
               <div class="btnWrapper">
                 <button class="emplData" type="submit" action="submit">
-                  Edytuj dane pracownika!
+                  Wyświetl lub edytuj pracownika!
                 </button>
               </div>
             </form>
