--- a/school/templates/dodaj1.html
+++ b/school/templates/dodaj1.html
@@ -124,6 +124,7 @@
   <body>
     <div class="form">
       <form action="dodawanieDoBazy" method="post">
+      	<h2># Dane pracownika</h2>
         <div class="input">
           <div class="inputBox">
             <label for="numer"> </label>
@@ -206,6 +207,7 @@
               required
             />
           </div>
+          <h2># Dane adresowe</h2>
           <div class="inputBox">
             <label for="date">Data zatrudnienia: </label>
             <input id="date" type="date" name="date" />
