--- a/school/templates/edycja2.html
+++ b/school/templates/edycja2.html
@@ -215,6 +215,7 @@
             />
           </div>
           {% for r in rodzic %}
+          <h2># Dane rodzica</h2>
           <div class="inputBox">
             <label for="numer_rodzica"></label>
             <input
@@ -288,6 +289,7 @@
             />
           </div>
           {% endfor %} {% for ad in adres %}
+          <h2># Dane adresowe</h2>
           <div class="inputBox">
             <label for="numer_adresu"></label>
             <input
@@ -360,5 +362,6 @@
         </div>
       </form>
     </div>
+    <script src="/static/js/edycja.js"></script>
   </body>
 </html>
