--- a/school/templates/nauczyciel.html
+++ b/school/templates/nauczyciel.html
@@ -114,7 +114,7 @@
               />
               <div class="btnWrapper">
                 <button type="submit" action="submit" class="editData">
-                  Edytuj!
+                  Wyświetl lub edytuj dane
                 </button>
               </div>
             </form>
